# tickets

./: README.md  docker-compose.yaml  setup.sh
application/: Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh  test.db
application/alembic/: env.py
application/alembic/versions/: 0071ca4660c9_update_relations.py  10dde5617668_add_tables_accounts_tokens_replies_.py  686659d8efc3_create_tables.py  833d58276dfb_add_auto_increment.py  fa153243478b_update_table_token.py
application/api/staff/: routes.py
application/api/ticket/: routes.py
application/api/user/: routes.py
application/core/: auth.py  auth_bearer.py  date_utils.py  errors_handler.py  settings.py
application/db/: base.py  base_class.py
application/db/tables/: account.py  reply.py  ticket.py  token.py
application/dependencies/: account_service.py  session.py
application/logs/: app.log.1
application/repositories/: account_repository.py  ticket_repository.py
application/schemas/: account_schema.py  reply_schema.py  ticket_schema.py
application/services/: account_services.py
application/test/: test.db  tests.py
