[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Huy Ngo <ngodotronghuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
mysql-connector-python = "^8.2.0"
pymysql = "^1.1.0"
bcrypt = "^4.1.2"
email-validator = "^2.1.0.post1"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
